# amq_manager

./: .gitignore  README.md  check_connection.py  check_stomp.py  implementation_plan.md  pyproject.toml  task.md  walkthrough.md
docs/: development_guidelines.md
spec/: 01-2025-11-24-list-queues.md  02-2025-11-24-view-messages.md  03-2025-11-24-manage-messages.md  04-2025-11-24-connection-config.md  05-2025-11-24-configuration-manager.md  06-2025-11-24-https-support.md  07-2025-11-24-logging.md  08-2025-11-24-configurable-path.md  09-2025-11-24-message-headers.md  10-2025-11-24-filtering.md  11-2025-11-24-enhanced-message-filtering.md  12-2025-11-24-batch-operations.md  13-2025-11-24-queue-autocomplete.md  14-2025-11-24-modal-keyboard-shortcuts.md  15-2025-11-24-message-count-display.md  16-2025-11-24-context-aware-refresh.md
src/amq_manager/: client.py  config.py  main.py
src/amq_manager/ui/: app.py  batch_move_modal.py  connection_screen.py  log_screen.py  message_detail.py  message_list.py  move_modal.py
