[project]
name = "amq-manager"
version = "0.1.0"
description = "A TUI for managing ActiveMQ brokers"
authors = [
    {name = "Antigravity", email = "antigravity@example.com"},
]
dependencies = [
    "textual>=0.40.0",
    "requests>=2.31.0",
    "stomp.py>=8.1.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amq_manager"]

[project.scripts]
amq-manager = "amq_manager.main:run"
